# designate-tempest-plugin

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
designate_tempest_plugin/: clients.py  config.py  data_utils.py  plugin.py
designate_tempest_plugin/common/: constants.py  exceptions.py  models.py  pool_config.py  waiters.py
designate_tempest_plugin/hacking/: checks.py
designate_tempest_plugin/schemas/v1/: records_schema.py
designate_tempest_plugin/services/dns/: __init__.py
designate_tempest_plugin/services/dns/admin/: __init__.py
designate_tempest_plugin/services/dns/admin/json/: base.py  quotas_client.py
designate_tempest_plugin/services/dns/json/: base.py
designate_tempest_plugin/services/dns/query/: query_client.py
designate_tempest_plugin/services/dns/v1/: __init__.py
designate_tempest_plugin/services/dns/v1/json/: base.py  domains_client.py  records_client.py  servers_client.py
designate_tempest_plugin/services/dns/v2/: __init__.py
designate_tempest_plugin/services/dns/v2/json/: api_version_client.py  base.py  blacklists_client.py  designate_limit_client.py  pool_client.py  ptr_client.py  quotas_client.py  recordset_client.py  service_client.py  shared_zones_client.py  tld_client.py  transfer_accepts_client.py  transfer_request_client.py  tsigkey_client.py  zone_exports_client.py  zone_imports_client.py  zones_client.py
designate_tempest_plugin/tests/: base.py  rbac_utils.py
designate_tempest_plugin/tests/api/admin/: test_quotas.py
designate_tempest_plugin/tests/api/v1/: test_domains.py  test_records.py  test_servers.py
designate_tempest_plugin/tests/api/v2/: base.py  invalid_mx_dataset.json  invalid_sshfp_dataset.json  invalid_txt_dataset.json  recordset_data.json  recordset_data_invalid.json  recordset_wildcard_data.json  test_blacklists.py  test_designate_limits.py  test_enabled_api_version.py  test_pool.py  test_ptrs.py  test_quotas.py  test_recordset.py  test_recordset_validation.py  test_service_statuses.py  test_shared_zones.py  test_tld.py  test_transfer_accepts.py  test_transfer_request.py  test_tsigkey.py  test_unauthed.py  test_zone_tasks.py  test_zones.py  test_zones_exports.py  test_zones_imports.py  unauthed_data.json  valid_txt_dataset.json
designate_tempest_plugin/tests/resources/: __init__.py
designate_tempest_plugin/tests/resources/pools_yaml/: multiple-pools.yaml  other-pools.yaml
designate_tempest_plugin/tests/scenario/v2/: recordset_data.json  test_blacklists.py  test_classless_ptr.py  test_designate_multipool.py  test_limits.py  test_quotas.py  test_recordsets.py  test_shared_zones.py  test_tld.py  test_zones.py  test_zones_export.py  test_zones_import.py  test_zones_transfer.py
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst
playbooks/designate-bind9-multipool/: post.yaml
releasenotes/notes/: Remove-Designate-V1-tests-8537cfebe7c93976.yaml  deprecate-bug-1573141-22b980751913bc44.yaml  deprecate-bug_1932026_fixed-bce77fd318bdac52.yaml  drop-py-2-7-a36c3b1d4d875e21.yaml  drop-python38-support-1a8f8b06fcc028c5.yaml  remove-bug_1573141_fixed-0d485186ade21df3.yaml  remove-py-36-37-d7724851f8db349d.yaml
releasenotes/source/: conf.py  index.rst
roles/bind-logs-conf/tasks/: main.yaml
roles/multipool-bind-logs-conf/tasks/: main.yaml
tools/: pretty_flake8.py
zuul.d/: jobs.yaml  projects.yaml
