[metadata]
name = designate-tempest-plugin
summary = OpenStack DNS As A Service (Designate) Functional Tests
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/designate-tempest-plugin/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet :: Name Service (DNS)

[files]
packages =
    designate_tempest_plugin

[entry_points]
tempest.test_plugins =
    designate = designate_tempest_plugin.plugin:DesignateTempestPlugin

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
